@@ -91,7 +91,14 @@ public class XmlReader implements RunnableSource {
 		try {
 			SAXParser parser;
 			
-			inputStream = new FileInputStream(file);
+			// make "-" an alias for /dev/stdin
+			if(file.getName().equals("-"))
+			{
+				inputStream = System.in;
+			} else {
+				inputStream = new FileInputStream(file);
+			}
+			
 			
 			inputStream =
 				new CompressionActivator(compressionMethod).
